Resolve facet/search results layout issues at all breakpoints

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -139,6 +139,13 @@ form.input-group {
   color:white;
 }
 
+/* Facets */
+#facets-pane {
+  //margin-left: 1em;
+  padding-left: 2em;
+  max-width:none;
+}
+
 /* Footer */
 
 /* the submit button */
